test template and update controller logic

--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -4,7 +4,7 @@
   {{ range.boards }}
   <li>
     <a href="/b/{{ .Title }}">
-      {{ .Title }}
+      /b/{{ .Title }}
     </a>
   </li>
   {{ end }}
